feat(lambda): added go module, makefile and updated docs

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
+
+# Go executable output
+main
