chore: lowercase orders in example config

--- a/configuration/example_config.json
+++ b/configuration/example_config.json
@@ -1,6 +1,7 @@
 {
-  "Orders": [
+  "orders": [
     {
+      "exchange": "kraken",
       "direction": "buy",
       "ordertype": "market",
       "volume": "10",
