--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
     timeout-minutes: 10
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: setup go
+      - name: Setup Go
         uses: actions/setup-go@v2
         with:
           go-version: '^1.17'
 
-      - name: build project
+      - name: Build Project
         run: go version
 
