--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,8 @@ jobs:
           go-version: '^1.17'
 
       - name: Build Project
-        run: make
+        run: make build
+
+      - name: Run Tests
+        run: make test
 
