chore(ci): updated name for lambda execute orders

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           terraform validate -no-color
 
-  deploy:
+  deploy-lambda-execute-orders:
     needs: [build, terraform-lint]
     runs-on: ubuntu-latest
     timeout-minutes: 5
