--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
+
+# Go executable output
+main
+dca-manager
+data
+function.zip
