--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,7 +119,7 @@ jobs:
           role-session-name: "GithubAction"
 
       - name: Pack
-        run: make pack_lambda_process_orders
+        run: make pack_process_orders
 
       - name: Upload
         run: >
