--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+
       - name: Setup Pipenv
         run: pip install pipenv
 
