--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -27,9 +27,11 @@ jobs:
       - name: Setup Pipenv
         run: |
           pip install pipenv
-          pipenv shell
+          pipenv lock -r --dev > requirements.txt
+
+      - name: Install Requirements
+        run: |
+          python -m pip install -r requirements.txt
 
       - name: Lint
-        run: |
-          pipenv install --dev
-          pipenv run lint
+        run: flake8
