--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -27,11 +27,13 @@ jobs:
       - name: Setup Pipenv
         run: |
           pip install pipenv
-          pipenv lock -r --dev > requirements.txt
+          # pipenv lock -r --dev > requirements.txt
 
       - name: Install Requirements
         run: |
-          python -m pip install -r requirements.txt
+          # python -m pip install -r requirements.txt
+          pipenv shell
+          pipenv install
 
       - name: Lint
         run: flake8
