--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -25,15 +25,18 @@ jobs:
           python-version: 3.7
 
       - name: Setup Pipenv
-        run: |
-          pip install pipenv
-          # pipenv lock -r --dev > requirements.txt
+        run: pip install pipenv
+
+      - name: Cache Pipenv Environment
+        id: cache-pipenv
+        uses: actions/cache@v1
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install Requirements
-        run: |
-          # python -m pip install -r requirements.txt
-          pipenv shell
-          pipenv install
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: pipenv install
 
       - name: Lint
-        run: flake8
+        run: pipenv run flake8
