--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: 3.7
 
       - name: Setup Pipenv
-        run: pip install pipenv
+        run: pip install pipenv --dev
 
       - name: Cache Pipenv Environment
         id: cache-pipenv
