--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: 3.7
 
       - name: Setup Pipenv
-        run: pip install pipenv --dev
+        run: pip install pipenv
 
       - name: Cache Pipenv Environment
         id: cache-pipenv
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install Requirements
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: pipenv install
+        run: pipenv install --dev
 
       - name: Lint
         run: pipenv run flake8
