--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.7
+      - name: Setup Python
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: 3.9
 
       - name: Setup Pipenv
         run: pip install pipenv
