chore(schema): add schema tag to example config

--- a/configuration/example_config.json
+++ b/configuration/example_config.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://github.com/kiran94/dca-manager/tree/main/configuration/schema.json",
   "orders": [
     {
       "exchange": "kraken",
