--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 10
     defaults:
       run:
-        working-directory: configuration
+        working-directory: pkg/configuration
 
     steps:
       - name: Checkout
