--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -36,7 +36,7 @@ jobs:
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install Requirements
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        # if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: pipenv install --dev
 
       - name: Lint
