--- a/.github/workflows/glue.yml
+++ b/.github/workflows/glue.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Setup Pipenv
         run: pip install pipenv
 
-      - name: Cache Pipenv Environment
-        id: cache-pipenv
-        uses: actions/cache@v1
-        with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+      # - name: Cache Pipenv Environment
+      #   id: cache-pipenv
+      #   uses: actions/cache@v1
+      #   with:
+      #     path: ~/.local/share/virtualenvs
+      #     key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install Requirements
         # if: steps.cache-pipenv.outputs.cache-hit != 'true'
