--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           go-version: '^1.17'
 
+      - name: Install Tools
+        run: make install_tools
+
       - name: Build Project
         run: make build
 
