chore(coverage): update ga to run coverage

--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -29,9 +29,7 @@ jobs:
         run: make build
 
       - name: Run Tests
-        run: |
-          make test
-          make coverage
+        run: make coverage
 
       - name: Run Linting
         run: make lint
