chore(ci): add code coverage (#22)
* chore(make): add code coverage output

* chore(ci): add coverage to test step

* chore(main): removed dummy main file

* chore(coverage): add test step dependency

* chore(coverage): update ga to run coverage

--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -29,7 +29,7 @@ jobs:
         run: make build
 
       - name: Run Tests
-        run: make test
+        run: make coverage
 
       - name: Run Linting
         run: make lint
