--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: lambda
+name: main
 
 on:
   push:
@@ -9,7 +9,9 @@ on:
 
 
 jobs:
-  build:
+  # Layer 1
+
+  build-lambda:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -61,8 +63,9 @@ jobs:
         run: |
           terraform validate -no-color
 
+  # Layer 2
   deploy-lambda-execute-orders:
-    needs: [build, terraform-lint]
+    needs: [build-lambda, terraform-lint]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -99,7 +102,7 @@ jobs:
           --s3-key ${{ secrets.AWS_LAMBDA_SCRIPT_PREFIX }}/${{ secrets.AWS_LAMBDA_EXECUTE_ORDERS_KEY }}
 
   deploy-lambda-process-orders:
-    needs: [build, terraform-lint]
+    needs: [build-lambda, terraform-lint]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -134,3 +137,5 @@ jobs:
           --function-name ${{ secrets.AWS_LAMBDA_PROCESS_ORDERS_NAME }}
           --s3-bucket ${{ secrets.AWS_LAMBDA_BUCKET }}
           --s3-key ${{ secrets.AWS_LAMBDA_SCRIPT_PREFIX }}/${{ secrets.AWS_LAMBDA_PROCESS_ORDERS_KEY }}
+
+    # Layer 3
