--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,9 +63,31 @@ jobs:
         run: |
           terraform validate -no-color
 
+  validate-config:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: pkg/configuration
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+
+      - name: Install jsonschema
+        run: python -m pip install jsonschema
+
+      - name: Validate Example Config
+        run: jsonschema -i example_config.json schema.json
+
   # Layer 2
   deploy-lambda-execute-orders:
-    needs: [build-lambda, terraform-lint]
+    needs: [build-lambda, terraform-lint, validate-config]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -102,7 +124,7 @@ jobs:
           --s3-key ${{ secrets.AWS_LAMBDA_SCRIPT_PREFIX }}/${{ secrets.AWS_LAMBDA_EXECUTE_ORDERS_KEY }}
 
   deploy-lambda-process-orders:
-    needs: [build-lambda, terraform-lint]
+    needs: [build-lambda, terraform-lint, validate-config]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
