--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,21 @@ on:
 
 
 jobs:
-  # Layer 1
+  # Layer 0
+  validate-pr:
+    name: Validate PR title
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    steps:
+      - uses: amannn/action-semantic-pull-request@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  # Layer 1
   build-lambda:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: [validate-pr]
 
     steps:
       - name: Checkout
@@ -39,6 +49,7 @@ jobs:
   terraform-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    needs: [validate-pr]
     env:
       working-directory: terraform
 
@@ -66,6 +77,7 @@ jobs:
   validate-config:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: [validate-pr]
     defaults:
       run:
         working-directory: pkg/configuration
@@ -88,6 +100,7 @@ jobs:
   validate-glue:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: [validate-pr]
     defaults:
       run:
         working-directory: glue
