--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: lambda
+name: main
 
 on:
   push:
@@ -9,7 +9,9 @@ on:
 
 
 jobs:
-  build:
+  # Layer 1
+
+  build-lambda:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -61,8 +63,57 @@ jobs:
         run: |
           terraform validate -no-color
 
+  validate-config:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: pkg/configuration
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+
+      - name: Install jsonschema
+        run: python -m pip install jsonschema
+
+      - name: Validate Example Config
+        run: jsonschema -i example_config.json schema.json
+
+  validate-glue:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: glue
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+
+      - name: Setup Pipenv
+        run: pip install pipenv
+
+      - name: Install Requirements
+        run: pipenv install --dev
+
+      - name: Lint
+        run: pipenv run flake8
+
+
+  # Layer 2
   deploy-lambda-execute-orders:
-    needs: [build, terraform-lint]
+    needs: [build-lambda, terraform-lint, validate-config]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -99,7 +150,7 @@ jobs:
           --s3-key ${{ secrets.AWS_LAMBDA_SCRIPT_PREFIX }}/${{ secrets.AWS_LAMBDA_EXECUTE_ORDERS_KEY }}
 
   deploy-lambda-process-orders:
-    needs: [build, terraform-lint]
+    needs: [build-lambda, terraform-lint, validate-config]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -134,3 +185,41 @@ jobs:
           --function-name ${{ secrets.AWS_LAMBDA_PROCESS_ORDERS_NAME }}
           --s3-bucket ${{ secrets.AWS_LAMBDA_BUCKET }}
           --s3-key ${{ secrets.AWS_LAMBDA_SCRIPT_PREFIX }}/${{ secrets.AWS_LAMBDA_PROCESS_ORDERS_KEY }}
+
+  deploy-glue:
+    needs: [validate-glue, validate-config, terraform-lint]
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: glue
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          role-duration-seconds: 900
+          role-session-name: "GithubAction"
+
+      - name: Deploy
+        run: |
+          aws s3 sync scripts s3://${{ secrets.AWS_GLUE_BUCKET }}/${{ secrets.AWS_GLUE_SCRIPT_PREFIX }}
+
+  # Layer 3
+  release:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: [deploy-glue, deploy-lambda-process-orders, deploy-lambda-execute-orders]
+    steps:
+      - name: Release
+        uses: go-semantic-release/action@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
